# scaling-spork-gui

./: .gitignore  README.md  app.py  config.py  docker-compose.yaml  init_db.py  pyproject.toml
src/: dependencies.py  forms.py  init_db.py  models.py  routes.py
src/api/: abstract_client.py  api_client.py  base_client.py
src/forms/: __init__.py  add_student.py  incoming_request.py  search_student.py  students.py  vote.py
src/templates/: base.html  dashboard.html  incoming_request.html  incoming_request_result.html  index.html  login.html  main_page.html  protocol.html  students.html  votes.html
