[project]
name = "scaling-spork-gui"
version = "0.1.0"
description = ""
authors = [
    {name = "Старунов Андрей Сергеевич",email = "astarunov@ozon.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
